[gd_scene load_steps=4 format=2]

[ext_resource path="res://Achievements.gd" type="Script" id=1]
[ext_resource path="res://assets/images/kenney_game_icons/White/1x/exitLeft.png" type="Texture" id=2]
[ext_resource path="res://assets/resources/DynamicFontMedium.tres" type="DynamicFont" id=3]

[node name="Achievements" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 1230.0
custom_constants/separation = 50

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
icon = ExtResource( 2 )
icon_align = 1

[node name="ShowAchievements" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 620.0
margin_bottom = 250.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 3 )
text = "Show achievements"

[node name="Unlock" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 300.0
margin_right = 620.0
margin_bottom = 400.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 3 )
text = "Unlock Test Achievement"

[node name="Increment" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 450.0
margin_right = 620.0
margin_bottom = 550.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 3 )
text = "Increment Achievement by one"

[node name="Reveal" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 600.0
margin_right = 620.0
margin_bottom = 700.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 3 )
text = "Reveal & Unlock Hidden Achievement"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ShowAchievements" to="." method="_on_show_achievements_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Unlock" to="." method="_on_unlock_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Increment" to="." method="_on_increment_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Reveal" to="." method="_on_reveal_pressed"]
